--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>หน้าแรกของฉัน</title>
+  <title>พงษ์สวัสดิ์ | เว็บไซต์ส่วนตัว</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet" />
 </head>
@@ -15,27 +15,44 @@
         <input type="checkbox" id="menu-toggle" />
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <ul class="menu">
-          <li><a href="#about">เกี่ยวกับฉัน</a></li>
-          <li><a href="#skills">ทักษะ</a></li>
-          <li><a href="#contact">ติดต่อ</a></li>
+          <li><a href="#home">หน้าหลัก</a></li>
+          <li><a href="#articles">บทความ</a></li>
+          <li><a href="#faq">ถาม-ตอบ</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <section id="about">
-      <h2>เกี่ยวกับฉัน</h2>
-      <p>
-        ผมทำงานที่ อบต.คำนาดี จังหวัดร้อยเอ็ด สนใจการเขียนเว็บไซต์ Google Apps Script
-        และเทคโนโลยีเพื่อการบริการสาธารณะ
-      </p>
+    <section id="home">
+      <h2>หน้าหลัก</h2>
+      <p>สวัสดีครับ ผมพงษ์สวัสดิ์ เจ้าหน้าที่ธุรการจาก อบต.คำนาดี จังหวัดร้อยเอ็ด สนใจเทคโนโลยี การเขียนเว็บ และการให้บริการประชาชนผ่านดิจิทัล</p>
     </section>
 
-    <section id="skills">
-      <h2>ทักษะ</h2>
+    <section id="articles">
+      <h2>บทความ</h2>
+      <p>รวมบทความสั้น ๆ ที่เกี่ยวกับงานราชการ เทคโนโลยี และการใช้เครื่องมือดิจิทัลในการพัฒนาชุมชน</p>
       <ul>
-        <li>HTML / CSS / JavaScript</li>
-        <li>Google Apps Script</li>
-        <li>ออกแบบด้วย Canva</li>
+        <li><a href="#">การใช้ Google Apps Script เบื้องต้น</a></li>
+        <li><a href="#">จัดการเอกสารราชการออนไลน์อย่างมีประสิทธิภาพ</a></li>
+        <li><a href="#">3 เทคนิคสร้างเว็บแบบง่าย ๆ ด้วย GitHub Pages</a></li>
       </ul>
+    </section>
+
+    <section id="faq">
+      <h2>ถาม-ตอบ</h2>
+      <p>มีคำถามเกี่ยวกับเทคโนโลยี การใช้เครื่องมือราชการออนไลน์ หรือแนวทางการพัฒนาเว็บไซต์? ส่งคำถามมาได้เลยครับ</p>
+      <ul>
+        <li>❓ ถาม: ทำเว็บ GitHub Pages ต้องเสียเงินไหม?  
+            <br>✅ ตอบ: ไม่ต้องครับ ใช้ได้ฟรีตลอดชีวิต</li>
+        <li>❓ ถาม: ต้องเรียนโค้ดเก่งไหม?  
+            <br>✅ ตอบ: แค่ HTML/CSS พื้นฐานก็พอ เริ่มจากไฟล์เดียวได้เลย</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 PongsaWat Sappasorn | เว็บไซต์ส่วนตัว
+  </footer>
+</body>
+</html>
